--- a/operator/pkg/apis/istio/v1alpha1/v1alpha1.pb.html
+++ b/operator/pkg/apis/istio/v1alpha1/v1alpha1.pb.html
@@ -4664,6 +4664,17 @@ No
 No
 </td>
 </tr>
+<tr id="ProxyConfig-holdApplicationUntilProxyStarts">
+<td><code>holdApplicationUntilProxyStarts</code></td>
+<td><code><a href="https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue">BoolValue</a></code></td>
+<td>
+<p>Causes the sidecar to be injected at the front of the container list and blocks the start of the other containers until the proxy is ready</p>
+
+</td>
+<td>
+No
+</td>
+</tr>
 <tr id="ProxyConfig-resources" class="deprecated ">
 <td><code>resources</code></td>
 <td><code><a href="#Resources">Resources</a></code></td>
